extracted_vulnerabilities/pair_195409_226029/fixed_report.txt
extracted_vulnerabilities/pair_195409_226029/box_code_base_fixed.c:3:1: error: Unmatched '{'. Configuration: ''. [syntaxError]
{
^
nofile:0:0: information: Active checkers: There was critical errors (use --checkers-report=<filename> to see details) [checkersReport]

